--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Data source, copyright Zillow copyrightsigntrademarksign
+.Zip_Zhvi_allHomes.csv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
