--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Data source, copyright Zillow copyrightsigntrademarksign
-Zip_Zhvi_allHomes.csv
+Zip_Zhvi_AllHomes.csv
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
